// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <!---->
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"text-xs text-vanilla-400\\">hint</div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <!----> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":false,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none text-vanilla-400 px-4 py-2\\">
  <!---->
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-400\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zavatar-stub type=\\"link\\" image=\\"https://deepsource.io/example.png\\" fallbackimage=\\"hello-world\\" username=\\"hello\\" size=\\"xs\\" stroke=\\"bg-ink-100 p-1\\" class=\\"flex-shrink-0\\"></zavatar-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\">hello</span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":""} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;

exports[`renders CommandRow with all prop options: {"hint":"hint","shortkey":"Alt+KeyO","image":"https://deepsource.io/example.png","active":true,"icon":"arrow-up","labelHTML":"<b>hello</b>","label":"hello"} 1`] = `
"<li tabindex=\\"-1\\" role=\\"option\\" class=\\"flex items-center w-full h-10 space-x-3 focus:outline-none bg-ink-300 text-vanilla-100 pr-4\\">
  <div class=\\"w-0.5 mr-0.5 h-full rounded-r-lg -py-2 bg-juniper\\"></div>
  <zicon-stub icon=\\"arrow-up\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"flex-grow text-sm font-medium\\"><b>hello</b></span>
  <div class=\\"flex space-x-1\\"><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      Alt
    </span><span class=\\"flex items-center justify-center w-5 h-5 text-xs rounded-sm bg-ink-200 text-vanilla-100\\">
      O
    </span></div>
</li>"
`;
